--- a/styles/index.pcss
+++ b/styles/index.pcss
@@ -10,8 +10,8 @@
 }
 
 body {
+  @extend .text-m;
   background-color: var(--color-background);
   color: var(--color-foreground);
-  @extend .text-m-regular;
   position: relative;
 }
