--- a/styles/utility/colors.pcss
+++ b/styles/utility/colors.pcss
@@ -1,19 +1,3 @@
-/* Icon */
-.icon-color-blue {
-  --icon-color: var(--color-icon-blue);
-  --icon-secondary-color: var(--color-icon-blue-secondary);
-}
-
-.icon-color-green {
-  --icon-color: var(--color-icon-green);
-  --icon-secondary-color: var(--color-icon-green-secondary);
-}
-
-.icon-color-purple {
-  --icon-color: var(--color-icon-purple);
-  --icon-secondary-color: var(--color-icon-purple-secondary);
-}
-
 /* Theme */
 .no-bg {
   background-color: transparent;
